[package]
name = "day_4"
version = "0.1.0"
edition = "2021"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib"]

[features]
alloc = []
client = []
debug = []
idl-build = ["quasar-lang/idl-build"]

[dependencies]
quasar-lang = { git = "https://github.com/blueshift-gg/quasar", branch = "master" }
solana-instruction = { version = "3.2.0" }
solana-program-log = "1.1.0"
